Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/DP_Detail__c.object-meta.xml
<CustomObject>
    <label>DP Detail</label>
    <nameField>
        <displayFormat>DP-{000}</displayFormat>
        <label>DP Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DP Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>