Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Administrative__c.field-meta.xml
<CustomField>
    <fullName>Administrative__c</fullName>
    <label>Administrative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>