Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Billing_Software_Using__c.field-meta.xml
<CustomField>
    <fullName>Billing_Software_Using__c</fullName>
    <label>Billing Software Using / Want to Deploy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>