Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Can_You_Increase_the_Capital__c.field-meta.xml
<CustomField>
    <fullName>Can_You_Increase_the_Capital__c</fullName>
    <label>Increase Working Capital as per Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>