Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Can_you_Provide_Bank_Gu__c.field-meta.xml
<CustomField>
    <fullName>Can_you_Provide_Bank_Gu__c</fullName>
    <label>Can you Provide Bank Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>