Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DP Details</relationshipLabel>
    <relationshipName>DP_Details</relationshipName>
    <type>Lookup</type>
</CustomField>