Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Godown_Space_Area_In_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Godown_Space_Area_In_Sq_Ft__c</fullName>
    <label>Godown Space - Area In Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>