Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/In_your_showroom_how_much_space_you_can__c.field-meta.xml
<CustomField>
    <fullName>In_your_showroom_how_much_space_you_can__c</fullName>
    <label>Space you Can Allocate to Ashirvad ?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>