Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Managerial__c.field-meta.xml
<CustomField>
    <fullName>Managerial__c</fullName>
    <label>Managerial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>