Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Network_Details_Total_number_of_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Network_Details_Total_number_of_Dealer__c</fullName>
    <label>Network Details - Total number of Dealer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>