Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/No_Objection_in_using_Secondary_Software__c.field-meta.xml
<CustomField>
    <fullName>No_Objection_in_using_Secondary_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Objection in using Secondary Software</label>
    <type>Checkbox</type>
</CustomField>