Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Present_Shop_Showroom_Area_in_Sq__c.field-meta.xml
<CustomField>
    <fullName>Present_Shop_Showroom_Area_in_Sq__c</fullName>
    <label>Present Shop / Showroom- Area In Sq. Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>