Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Proposed_date_to_start_with_Ashirvad__c.field-meta.xml
<CustomField>
    <fullName>Proposed_date_to_start_with_Ashirvad__c</fullName>
    <label>Proposed date to start with Ashirvad</label>
    <type>Date</type>
</CustomField>