Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Sales_Staff_You_Can_Allocate_to_Ashirvad__c.field-meta.xml
<CustomField>
    <fullName>Sales_Staff_You_Can_Allocate_to_Ashirvad__c</fullName>
    <label>Sales Staff You Can Allocate to Ashirvad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>