Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Size_of_Dedicated_Godown_for_Ashirvad__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Dedicated_Godown_for_Ashirvad__c</fullName>
    <label>Size of Dedicated Godown for Ashirvad?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>