Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <label>Working Capital You Can Put for Ashirvad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>