Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/recordTypes/Business_Proposal_Questionaries.recordType-meta.xml
<RecordType>
    <fullName>Business_Proposal_Questionaries</fullName>
    <active>true</active>
    <label>Business Proposal Questionaries</label>
</RecordType>