Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/recordTypes/Staff_Details.recordType-meta.xml
<RecordType>
    <fullName>Staff_Details</fullName>
    <active>true</active>
    <label>Staff Details</label>
</RecordType>