Partial_14Dec2021/force-app/main/default/objects/DP_Detail__c/recordTypes/Turnover_Details.recordType-meta.xml
<RecordType>
    <fullName>Turnover_Details</fullName>
    <active>true</active>
    <label>Turnover Details</label>
</RecordType>